# Omnibox

./: README.md  cmd.txt
backend/: Cargo.toml  README  tauri.conf.json
backend/icons/: icon.icns
backend/src/: main.rs  models.rs  scanner.rs  storage.rs
bundle/msi/: Omnibox_0.1.0_x64_en-US.msi
frontend/: README  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
