[package]
name = "omnibox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心
tauri = { version = "1.5", features = ["global-shortcut-all", "window-all", "shell-open", "system-tray", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 扫描与并行
jwalk = "0.8"
rayon = "1.8"
sysinfo = "0.30"
dirs = "5.0"

# 搜索与算法
fuzzy-matcher = "0.3"
bincode = "1.3"
once_cell = "1.18"

# 系统交互
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }
auto-launch = "0.5" # 确认使用这个代替 tauri-plugin-autostart

# 日志 (强烈建议加上)
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = "1.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
pinyin = "0.9" 