[package]
name = "omnibox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心
tauri = { version = "1.5", features = ["global-shortcut-all", "window-all", "shell-open", "system-tray", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 扫描与并行
jwalk = "0.8"
rayon = "1.8"
sysinfo = "0.30"
dirs = "5.0"

# 搜索与算法
fuzzy-matcher = "0.3"
bincode = "1.3"
once_cell = "1.18"
pinyin = "0.9"   # <--- 修改在这里：必须放在 [dependencies] 下面

# 系统交互
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }
auto-launch = "0.5"

# 日志
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
