[package]
name = "omnibox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.52"

# ================= Core & Tauri =================
tauri = { version = "1.5", features = ["global-shortcut-all", "window-all", "shell-open", "system-tray", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ================= Scanning & System =================
jwalk = "0.8"
rayon = "1.10"     # 统一使用较新版本
sysinfo = "0.30"   # 统一版本
dirs = "5.0"

# ================= Search & Algorithm =================
fuzzy-matcher = "0.3"
bincode = "1.3"
once_cell = "1.18"
# 关键修复：只保留这一个 pinyin 定义，解决 multiple candidates 错误
pinyin = "0.9"     

# ================= Utilities =================
ahash = "0.8"
shellexpand = "3.1"
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }
auto-launch = "0.5"

# ================= Logging =================
log = "0.4"
env_logger = "0.10"

# ================= Platform Specific =================
# 仅在 Windows 下启用 lnk 解析库
[target.'cfg(windows)'.dependencies]
lnk = "0.3"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
